<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewGroupDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textViewGroupDetail"
        android:text="@string/groupname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listViewGroupDetail"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewGroupDetail" >
    </ListView>

    <Button
        android:id="@+id/buttonAddGroupUser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/listViewGroupDetail"
        android:text="@string/adduser" />

    <Button
        android:id="@+id/buttonBackGroupDetail"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/listViewGroupDetail"
        android:text="@string/back" />

</RelativeLayout>
